--- a/_posts/2020-02-11-JS汇总.md
+++ b/_posts/2020-02-11-JS汇总.md
@@ -328,7 +328,7 @@ typeof   	var     	void    	while       	with
 
   * 单双引号不能自插, 只能互插
 
-  ```
+  ```js
    //变量识别
               var address = '海底捞';
 
@@ -358,7 +358,7 @@ typeof   	var     	void    	while       	with
 * 字符串运算 只有 + , 是拼接,而非加法
 * 可用于 字符串变量识别
 
-```
+```js
 var num = 50;
 console.log( `今天所有错题每道 ${num} 遍` );
 console.log( '今天所有错题每道 '+ num +' 遍' );
@@ -391,7 +391,7 @@ console.log( '今天所有错题每道 '+ num +' 遍' );
 
 ## 知识普及
 
-```
+```js
 	最早的计算机, 只有128个字符, 别称之为 "ASCII"码, 不支持汉字
                 字母, 数字, 标点 占1B
 
@@ -414,7 +414,7 @@ console.log( '今天所有错题每道 '+ num +' 遍' );
 
 * 科学计数法 e
 
-  ```
+  ```js
   var x = 19;
   console.log( x, typeof x );//19 "number"
 
@@ -458,7 +458,7 @@ console.log( '今天所有错题每道 '+ num +' 遍' );
     * NaN 与 任何数比,结果都是false
     * 0/0 的结果是 NaN
 
-    ```
+    ```js
     console.log( NaN + 5 );
     console.log( NaN + 10.5 );
     console.log( NaN + true );
@@ -482,7 +482,7 @@ console.log( '今天所有错题每道 '+ num +' 遍' );
 
 ## 进制之间的转换
 
-```
+```js
  			基数           前缀
  二进制      0-1            0b
  八进制      0-7            0 或 0o
@@ -502,7 +502,7 @@ console.log( '今天所有错题每道 '+ num +' 遍' );
 
 * 浮点数在转为二进制时, 会有部分差异, 结果并不完全准确,   所以, 不推荐使用浮点进行 等值比较
 
-```
+```js
  			<script>
                 var num1 = 0.1;
                 var num2 = 0.2;
@@ -526,7 +526,7 @@ console.log( '今天所有错题每道 '+ num +' 遍' );
 
 * 骚操作: 在数值前面加 + 号, 也能让数值转为number
 
-```
+```js
  		<script>
  			var num = '10.5';
             var num2 = +num;
@@ -581,7 +581,7 @@ console.log( '今天所有错题每道 '+ num +' 遍' );
 
   *   Boolean('false');
 
-  * Boolean(null);
+  * Boolean('null');
 
 
 
@@ -618,7 +618,7 @@ console.log( '今天所有错题每道 '+ num +' 遍' );
 
 * 函数没有return时, 需要执行里面的所有代码块, 并返回undefined
 
-```
+```js
  	// function 类型
     function demo6(){
        console.log(666);
@@ -645,8 +645,6 @@ console.log( '今天所有错题每道 '+ num +' 遍' );
 ## 获取数组中的一个数据
 
 *  格式: 变量[索引]
-
-
 
 * 出索引范围, 则返回undefined
 
@@ -685,7 +683,7 @@ console.log( '今天所有错题每道 '+ num +' 遍' );
 
 ## 定义对象
 
-```
+```js
  {
  	属性名: 属性值,
     属性名: 属性值,
@@ -704,8 +702,6 @@ console.log( '今天所有错题每道 '+ num +' 遍' );
 ## 使用属性
 
 * 对象.属性名
-
-
 
 *   注: 属性名若由多个单词 或 奇怪的字符组成, 建议加引号
   *   格式: 对象['属性名']
@@ -756,7 +752,7 @@ console.log( '今天所有错题每道 '+ num +' 遍' );
 * 一般情况, null 都是主动赋予的
 * 作用: 占位
 
-```
+```js
 var woman = {
        'name': '杨幂',
         obj': null,
@@ -768,7 +764,7 @@ var woman = {
 * null 是关键字, undefined 不是关键字
 * null 和 undefined 是等价的, 只是数据类型不同
 
-```
+```js
  console.log( null == undefined );   // == 比较两边的值 是否相等
  console.log( null === undefined );  // === 比较两边的值 是否相等 且 两边的数据类型是否相等
 ```
@@ -785,7 +781,7 @@ var woman = {
 
 *  原始类型的值称之为: 原始值
 *   原始值 都存储在 栈内存中
-* 栈内存中的数据多事直接访问的
+* 栈内存中的数据都是直接访问的
 *  效率较高
 * 存储空间固定 且 小
 
@@ -830,8 +826,6 @@ var woman = {
 
 *  Boolean()
 
-
-
 *   有8种情况会转为false, 其余都是true
    * 0
    * -0
@@ -842,14 +836,12 @@ var woman = {
    * undefined
    * false
 
-
-
 # 算术运算符
 
-```
+```js
 + - * /                   / 不是整除      5 / 2 = 2.5;
 % 取模, 求余数
-** 指
+** 指数
 ```
 
 ## 取模规律
@@ -915,7 +907,7 @@ var woman = {
 - /=      a /= b  ==>  a = a / b;
 - %=      a %= b  ==>  a = a % b;
 
-```
+```js
 			// 带坑
             var a = '10';
             var b = 20;
@@ -927,7 +919,7 @@ var woman = {
 
 - 值: boolean
 
-  ```
+  ```js
   * > >=
   * < <=
   * ==              判断两边的值是否相等
@@ -956,7 +948,7 @@ var woman = {
 
 - 三元可以嵌套  (使用频率较低)
 
-```
+```js
   			// var lv = 6;
             // var lv = prompt('请输入您的等级');
             // prompt() 输入框
@@ -980,7 +972,7 @@ var woman = {
 - 注:
   - 优先级: 逻辑非 > 逻辑与 > 逻辑或
 
-```
+```js
                 var x = 10;
                 var y = 0;
                 console.log( x && true );     //true
@@ -1058,17 +1050,17 @@ console.log( ~x ); // --13 - 1 = 12
 补码:         11111111 11111111 11111111 11011010
 //2.左移     111111111 11111111 11111111 10110100
 //3.减1      111111111 11111111 11111111 10110011
-//4.取反码:  000000000 00000000 00000000 0100110
+//4.取反码:  000000000 00000000 00000000 01001100
 //5.加符号位: -76
 
 var x = -42;        //32 + 8 +2   10 1010
 console.log( x >> 1 ); //-21
-// 原码    00000000000000000000000000101010
-// 反码:   11111111111111111111111111010101
-// 补码:   11111111111111111111111111010110
-// 右移1位 11111111111111111111111111101011
-// 减1     11111111111111111111111111101010
-// 求反码  0000000000000000000000000001 0101   ==>21
+// 原码    00000000 00000000 00000000 00101010
+// 反码:   11111111 11111111 11111111 11010101
+// 补码:   11111111 11111111 11111111 11010110
+// 右移1位  1111111 11111111 11111111 11101011
+// 减1      1111111 11111111 11111111 11101010
+// 求反码   0000000 00000000 00000000 0001 0101   ==>21
 // 加符号位-21
 
 
@@ -1088,8 +1080,6 @@ console.log( x >> 1 ); //-21
 - 格式: void变量
 - 格式: void(变量)    推荐写法
 
-
-
 - 应用场景: 常被用于"禁止超链接的刷新"
 
   ```js
@@ -1099,8 +1089,6 @@ console.log( x >> 1 ); //-21
      <a href="javascript:void(0)">baidu</a>
 
   ```
-
-
 
 - new
 
@@ -1130,7 +1118,7 @@ console.log(z.split(' ', 2));//[ab,cef]
 
 ## 运算符优先级
 
- ```
+ ```js
 Js 运算符优先级
 优先级	运算符	描述	关联性
 20	( )	圆括号
@@ -1169,7 +1157,7 @@ Js 运算符优先级
 
  ```
 
-```
+```js
 17	++	递增
 	--	递减
 16	!	逻辑非
@@ -1199,7 +1187,7 @@ Js 运算符优先级
   - 除以2的n次方 (抛弃小数位)
   - 因为抛弃小数位, 右移0位, 可以实现取整效果
 
-```
+```js
 			<script>
                 // 左移 - 翻倍
                 var x = 20;
@@ -1226,7 +1214,7 @@ Js 运算符优先级
 - 双取反
 - 右移0位
 
-```
+```js
 		<script>
             var x = 10.5;
             console.log( x ^ 0 ); // 10     1010    0000
@@ -1242,7 +1230,7 @@ Js 运算符优先级
   - 结果为0 : 偶数
   - 结果为1 : 奇数
 
-```
+```js
 	<script>
           console.log( 0 & 1 ); // 0
           console.log( 1 & 1 ); // 1
@@ -1283,8 +1271,6 @@ Js 运算符优先级
 - 通过 class获取    document.getElementsByClassName('class名');
 - 通过 标签名获取   document.getElementsByTagName('标签名');
 
-
-
 - id 得到的是一个 对象
 - class 得到的是一个 集合
 - 标签 得到的是一个 集合
@@ -1317,7 +1303,7 @@ Js 运算符优先级
 - console.log(对象)
 - console.dir(对象)     详细的查看对象的属性和方法(并非所有的都是准确(兼容性))
 
-```
+```js
  console.log(books);
  console.dir(books);
 ```
@@ -1358,12 +1344,12 @@ tel.type = 'password';
 - 获取内容格式: 对象.innerHTML
 - 设置内容格式: 对象.innerHTML = 内容
 
-```
+```js
 // 设置内容
 box.innerHTML = '打嗝要命, 饿了';
 
 // 获取内容
-console.log( box.
+console.log( box.innerHTML);
 ```
 
 # 循环结构-分支
@@ -1396,7 +1382,7 @@ console.log( box.
 
 #### 双向分支
 
-```
+```js
  if(条件表达式){
    代码块(成立)
  }else{
@@ -1435,7 +1421,7 @@ if(条件表达式1){
 
 #### 巢状分支
 
-```sj
+```js
 if(条件表达式1){
     if(条件表达式2){
         if(条件表达式3){
@@ -1474,8 +1460,8 @@ if(条件表达式1){
 // 带坑
 var x = 1;
 
-// switch( x ){
-switch( x > 0 ){
+// switch( x ){//666
+switch( x > 0 ){//111
     case '': console.log('888'); break;
     case true: console.log('111'); break;
     case null: console.log('222'); break;
@@ -1485,7 +1471,7 @@ switch( x > 0 ){
     case 1.0: console.log('666');break;
     case 3-2: console.log('777');break;
     default: console.log('000');break;
-}//666
+}
 ```
 
 # 循环
@@ -1554,7 +1540,7 @@ for( ①初始值; ②循环条件; ③循环增量){
 
 - 格式:
 
-  ```
+  ```js
   for( 变量 in 对象){
        代码块
      }
@@ -1626,7 +1612,7 @@ document.write('<hr />');
 
 - 多初始化 + 多增量
 
-  ```
+  ```js
   for(var i = 0, j = 9 ; i < 10 && j > 5 ; i++, j--){
        document.write(i+' ');
   }
@@ -1637,7 +1623,7 @@ document.write('<hr />');
 
 - 作用域
 
-  ```
+  ```js
    for(var m = 0; m < 10; m++){
 
    }
@@ -1653,7 +1639,7 @@ document.write('<hr />');
 
 ## 易错题
 
-```
+```js
 			 var x = 10;
             var x;
             console.log(x); // 10   注意: 不是undefined
@@ -1684,16 +1670,16 @@ document.write('<hr />');
 
 - 星阵图			先行再列
 
-  ```
-  			*
+  ```js
+  		   *
               **
               ***
               ****
               *****
   ```
 
-  ```
-  			i 控制行
+  ```js
+  		   i 控制行
               j 控制列
 
               i = 0   内循环要循环1次   j = 0; j < 1 ; j++
@@ -1712,7 +1698,7 @@ document.write('<hr />');
                                         j = 0; j < i+11; j++
   ```
 
-  ```
+  ```js
               *****
               ****
               ***
@@ -1720,8 +1706,8 @@ document.write('<hr />');
               *
   ```
 
-  ```
-   			*****
+  ```js
+   		   *****
               -****
               --***
               ---**
@@ -1733,7 +1719,7 @@ document.write('<hr />');
 - 倒映数
   3 2 1 0 1 2 3
 
-```
+```js
 	<script>
 
         // -3 -2 -1 0 1 2 3
@@ -1758,8 +1744,8 @@ document.write('<hr />');
     </script>
 ```
 
-```
-			*
+```js
+		   *
             **
             ***
             ****
@@ -1777,7 +1763,7 @@ document.write('<hr />');
                                         j=0; j<4-tmp; j++
 ```
 
-```
+```js
 	<script>
         for(var i = -3; i <= 3; i++){
 
@@ -1800,16 +1786,12 @@ document.write('<hr />');
 # 类型转换
 
 - 转为数字
-  - undefined=>NaN
-  - null==>0
-  - ""==>0
-  - "one"=>NaN
+  - undefined => NaN
+  - null ==> 0
+  - "" ==> 0
+  - "one"  => NaN
   - 输出套用两层 为undefined
   - 输出套用多层 为报错
-
-
-
-
 
 # 函数
 
@@ -1847,7 +1829,7 @@ document.write('<hr />');
   - 构造器的参数和代码块 必须是 string类型出现(使用较少)
   - 带箭头函数 ES6新增, 简化格式+隐式返回
 
-```
+```js
  <script>
         //无参函数
 
@@ -1906,7 +1888,7 @@ document.write('<hr />');
   - 普通函数内的this, 代表window对象
   - 事件函数内的this, 代表当前触发事件的对象
 
-```
+```js
 <script>
         function demo(){
             return '这是 Demo函数';
@@ -1972,14 +1954,14 @@ document.write('<hr />');
     </script>
 
     <div id="box1">
-        <img src="F:\实习培训\2019-12-11\resource\1.gif" width="200" >
-        <img src="F:\实习培训\2019-12-11\resource\2.jpg" width="200" >
-        <img src="F:\实习培训\2019-12-11\resource\2.png" width="200" >
+        <img src="\resource\1.gif" width="200" >
+        <img src="\resource\2.jpg" width="200" >
+        <img src="\resource\2.png" width="200" >
     </div>
     <div id="box2">
-        <img src="F:\实习培训\2019-12-11\resource\1.gif" width="200" >
-        <img src="F:\实习培训\2019-12-11\resource\2.jpg" width="200" >
-        <img src="F:\实习培训\2019-12-11\resource\2.png" width="200" >
+        <img src="\resource\1.gif" width="200" >
+        <img src="\resource\2.jpg" width="200" >
+        <img src="\resource\2.png" width="200" >
     </div>
 
     <script>
