--- a/_posts/2020-02-11-JS汇总.md
+++ b/_posts/2020-02-11-JS汇总.md
@@ -1991,7 +1991,7 @@ document.write('<hr />');
 - 如何一次性返回多个值
   - 将多个值 封装到数组, 对象中, 一次性进行返回
 
-```
+```js
 <script>
     //返回到调用函数的地方
     function demo(n1, n2){
@@ -2072,7 +2072,7 @@ document.write('<hr />');
   - 使用 arguments 对象
   - 形参一个都不需要设置
 
-```
+```js
 <script>
         //n1, n2 是形参
         function demo(n1, n2){
@@ -2200,7 +2200,7 @@ document.write('<hr />');
   - delete 可以删除不用var声明的变量
   - delete 不可以删除用var, let声明的变量
 
-```
+```js
  <script>
         //全局变量  y
         //局部变量  x
@@ -2370,7 +2370,7 @@ document.write('<hr />');
   - 自成一域 (独自创建一个局部作用域, 将形参与实参设为同名局部环境则无法使用外部重名变量, 从而避免变量污染)
 - 变量污染:    函数内部使用函数外部的变量, 但是并不需要外部变量,此行为称之为"变量污染"
 
-```
+```js
  <script>
         //无参自执行
         (function(){
@@ -2427,7 +2427,7 @@ document.write('<hr />');
 
 
 
-```
+```js
 <script>
     function run3(){
         var count = 0;
@@ -2450,10 +2450,6 @@ document.write('<hr />');
  </script>
 ```
 
-
-
-
-
 # call和apply
 
 ## call
@@ -2472,7 +2468,7 @@ document.write('<hr />');
 - call 是分别接受参数
 - apply 是接收数组参数
 
-```
+```js
       <script>
         var A ={
             'name': '大哥',
@@ -2589,7 +2585,7 @@ document.write('<hr />');
 ​                ...
 ​            }
 
-```
+```js
  	  <script>
          //对象构造器
          var Dog = new Object();
@@ -2661,7 +2657,7 @@ document.write('<hr />');
   - 使用任意属性or方法, 必须先有一个对象才行
   - 奇葩属性使用 [] 读取
 
-```
+```js
 	<script>
          //属性
         var obj = {
@@ -2717,7 +2713,7 @@ document.write('<hr />');
 - 原型 prototype
   - 能在原型对象上进行添加属性or方法
 
-```
+```js
 	<script>
          function Dog(){
             this.type = '泰迪';
@@ -2810,7 +2806,7 @@ document.write('<hr />');
 ​                str[i];
 ​            }
 
-```
+```js
 	<script>
          //Json
          var x = [];
@@ -2910,9 +2906,9 @@ document.write('<hr />');
 - clearTimeout(计时器id)     清除单次计时器
 - clearInterval(计时器id)     清除多次计时器
 
-```
+```js
 	<script>
-         //单词计时
+         //单次计时
         // setTimeout(function(){
         //     console.log('3s 到了');
         // },3000);
@@ -3110,7 +3106,7 @@ document.write('<hr />');
 - 老IE: 对象.detachEvent('on事件',函数名)
 - 非IE: 对象.removeEventListener('事件',函数名)
 
-```
+```js
  <!-- 事件属性 -->
     <button  onclick=" alert('点我一下'); ">点我一下</button>
 
@@ -3156,10 +3152,6 @@ document.write('<hr />');
     </script>
 ```
 
-
-
-
-
 # 鼠标事件
 
 - onclick     		单击事件
@@ -3186,7 +3178,7 @@ document.write('<hr />');
   - event.screenX    鼠标相对于电脑屏幕的横坐标
   - event.screenY    鼠标相对于电脑屏幕的纵坐标
 
-```
+```js
  <style>
        #box{
            width: 500px;
@@ -3274,7 +3266,7 @@ document.write('<hr />');
 - event.charCode      按键的ASCII码 (只有onkeypress可以触发)         字母小写
 - event.key                  键盘上的真实符号                                                   字母为小写
 
-```
+```js
 <script>
          // document.onkeydown = function(){
             // var r = parseInt(Math.random()*256);
@@ -3368,7 +3360,7 @@ document.write('<hr />');
   - safari:    window.pageYOffest
   - 其余:      document.documentElement.scrollTop
 
-```
+```js
 <script>
          window.onload = function(){
             var box = document.getElementById('box');
@@ -3417,10 +3409,6 @@ document.write('<hr />');
 
 ```
 
-
-
-
-
 # 表单事件
 
 - onfocus          获取焦点时
@@ -3442,7 +3430,7 @@ document.write('<hr />');
     - doucment.getElementsByName()           得到 节点列表
     - document.name名                        得到 html集合
 
-```
+```js
 	<style>
         input{
             outline: none;
@@ -3699,7 +3687,7 @@ document.write('<hr />');
   - /正则/          无法识别变量
   - new RegExp()    可以识别变量
 
-```
+```js
 <script>
   //基本用法
   var str = 'abc789';
@@ -3757,7 +3745,7 @@ document.write('<hr />');
 - 冒泡模式  false  :  由内而外传递事件 (默认)
 - 捕获模式  true   :  由外而内传递事件
 
-```
+```js
 	<style>
         #big{
             width: 500px;
@@ -3855,7 +3843,7 @@ document.write('<hr />');
   - 非IE     event.preventDefault()
   - IE          event.returnValue = false;
 
-```
+```js
 	<a href="http://www.baidu.com" id="baidu">baidu</a>
     <script>
         var baidu = document.getElementById('baidu');
@@ -3889,7 +3877,7 @@ document.write('<hr />');
 
 ## window
 
-- 几乎所有浏览器斗殴支持window
+- 几乎所有浏览器都支持window
 - window: 浏览器窗口, 所有全局可以用的变量, 函数都属于window对象的属性or方法
 
 ## 浏览器尺寸
@@ -3936,7 +3924,7 @@ document.write('<hr />');
   - window.scrollBy()       相对于当前位置进行滚动
   - window.scroolTo()       直接滚动到指定位置
 
-```
+```js
 	<script>
          var x = 10;
          console.log(x);
@@ -4022,7 +4010,7 @@ document.write('<hr />');
 
 ## 敏感词处理
 
-```
+```js
 	<style>
         #show{
             width: 500px;
@@ -4079,7 +4067,7 @@ document.write('<hr />');
 
 ## 表单验证
 
-```
+```js
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -4210,10 +4198,6 @@ document.write('<hr />');
 </body>
 </html>
 ```
-
-
-
-
 
 # DOM
 
@@ -4365,7 +4349,7 @@ document.write('<hr />');
 - 属性节点.value
 - ...
 
-```txt
+```js
 	 <style>
         .x{
             color: red;
