--- a/_posts/2020-03-05-基于jquery数据交互.md
+++ b/_posts/2020-03-05-基于jquery数据交互.md
@@ -8,7 +8,7 @@
 
 * index.js
 
-```
+```js
 $(function() {
     $("#login").on("click", function() {
         window.location = "./login/login.html";
@@ -23,7 +23,7 @@ $(function() {
         let data = {
             "token": token,
         }
-        $.get("http://playground.it266.com/profile", data, function(result) {
+        $.get("http://xxx/profile", data, function(result) {
             if (result.status) {
                 $('#main_right_nologin').hide();
                 $('#main_right_login').show();
@@ -67,7 +67,7 @@ $(function() {
 ```
 * index.html
 
-```
+```js
 <!DOCTYPE html>
 <html lang="en">
 
@@ -178,7 +178,7 @@ $(function() {
 
 * index.css
 
-```
+```css
 body,
 ul,
 li {
@@ -405,7 +405,7 @@ li {
 
 * register.html
 
-```
+```html
 <!DOCTYPE html>
 <html lang="en">
 
@@ -453,7 +453,7 @@ li {
             username: $(username).val(),
             password: $(password).val(),
         };
-        $.post("http://playground.it266.com/register", data, function(result) {
+        $.post("http://xxx/register", data, function(result) {
             //获取注册状态
             if (!result.status) {
                 $("#messages").html(result.data).show();
@@ -472,7 +472,7 @@ li {
 
 * register.css
 
-```
+```css
 body,
 ul,
 li {
@@ -554,7 +554,7 @@ li {
 
 * login.html
 
-```
+```html
 <!DOCTYPE html>
 <html lang="en">
 
@@ -592,7 +592,7 @@ li {
             username: $(username).val(),
             password: $(password).val(),
         };
-        $.post("http://playground.it266.com/login", data, function(result) {
+        $.post("http://xxx/login", data, function(result) {
             //判断用户状态
             if (!result.status) {
                 $("#messages").html(result.data).show();
@@ -612,7 +612,7 @@ li {
 
 * login.css
 
-```
+```css
 body,
 ul,
 li {
