--- a/_posts/2020-03-09-React组件化思想和动态加载数据.md
+++ b/_posts/2020-03-09-React组件化思想和动态加载数据.md
@@ -8,7 +8,7 @@
 
 * index.js
 
-```
+```react
 import React from "react";//导入React
 import {render} from "react-dom";//导入render 渲染
 import "./style.css";//导入css
@@ -46,7 +46,7 @@ render(App, document.getElementById("root"));//渲染
 
 * style.css
 
-```
+```react
 body,ul,li{
     margin: 0;
     padding: 0;
@@ -58,7 +58,7 @@ body,ul,li{
 * search文件夹下
 * index.js
 
-```
+```react
 import Img from "../../img/ear.png";
 import React from "react";
 import "./style.css";//导入css
@@ -78,7 +78,7 @@ export default Search;
 * nav文件夹下
 * index,js
 
-```
+```react
 import React from "react";
 import "./style.css"
 
@@ -104,7 +104,7 @@ export default Nav;
 * banner文件夹下
 * index.js
 
-```
+```react
 import ImgBanner from "../../img/banner.png";
 import React from "react";
 import "./style.css"
@@ -123,7 +123,7 @@ export default Banner;
 * article文件夹下
 * index.js
 
-```
+```react
 import React , {Component} from "react";
 import "./style.css"
 import U1img from "../../img/u1.png";
@@ -166,7 +166,7 @@ class Article extends Component{
 
         // 基本使⽤用示例例
 
-        axios.get('http://playground.it266.com/news')
+        axios.get('http://xxx/news')
             .then((response) => { //记得要使⽤用箭头函数
                 console.log(response) //服务器器响应的数据
                 this.setState({
@@ -211,7 +211,7 @@ export default Article;
 * footer文件夹下
 * index.js
 
-```
+```react
 import React from "react";
 import "./style.css"
 
@@ -230,7 +230,7 @@ export default Footer;
 * tabbar文件夹下
 * index.js
 
-```
+```react
 import foot1 from "../../img/ficon1.png";
 import foot2 from "../../img/ficon2.png";
 import foot3 from "../../img/ficon3.png";
