--- a/_posts/2020-03-12-React实现注册功能.md
+++ b/_posts/2020-03-12-React实现注册功能.md
@@ -9,7 +9,7 @@
 
 * index.js
 
-```
+```react
 import React from "react";
 import {render} from "react-dom";
 import "./style.css"
@@ -29,7 +29,7 @@ render(App,document.getElementById("root"));
 * register文件夹下
 * index.js
 
-```
+```react
 import "./style.css"
 import React , {Component} from "react";
 import axios from 'axios'
@@ -66,7 +66,7 @@ class Register extends Component{
             username: this.state.username,
             password: this.state.password
         }
-        axios.post('http://playground.it266.com/register', qs.stringify(data))
+        axios.post('http://xxx/register', qs.stringify(data))
             .then((response) => {
                 console.log(response)
                 this.setState({
