--- a/_posts/2020-03-20-React分页搜索功能.md
+++ b/_posts/2020-03-20-React分页搜索功能.md
@@ -10,7 +10,7 @@
 # React 分页 搜索功能实现
 
 
-```
+```react
 import React from "react";
 import {Link} from "react-router-dom";
 import axios from "axios";
@@ -50,7 +50,7 @@ class Index extends React.Component{
             id:id,
         }
         //ajax
-        axios.post('http://playground.it266.com/article/delete',qs.stringify(data),{
+        axios.post('http://xxx/article/delete',qs.stringify(data),{
             params:{
                 token:this.state.token,
             }
@@ -70,7 +70,7 @@ class Index extends React.Component{
     }
 
     getArticleItems = () =>{
-        axios.get('http://playground.it266.com/article',{
+        axios.get('http://xxx/article',{
                     params:{
                      token:this.state.token,
                      page:this.state.currentPage,
