--- a/_posts/2020-03-24-Scss.md
+++ b/_posts/2020-03-24-Scss.md
@@ -31,7 +31,7 @@
   * `sass --watch app/scss:demo/css`      目录
 * 记录脚本命令
 
-```
+```json
 yarn init -y 
 生成脚本文件  package.json
 
@@ -50,7 +50,7 @@ yarn dev
 
 ## 变量
 
-```
+```scss
 $font-stack:Helvetica,sans-serif;//变量
 $primary-color:#333;	
 body{
@@ -70,7 +70,7 @@ body{
 
 ## 嵌套
 
-```
+```scss
 nav{
     ul{
         margin:0;
@@ -118,14 +118,14 @@ nav a{
 
 * _partial.scss
 
-```
+```scss
 $primary_color:red;
 ```
 
 * imput.scss
 * @import "./partial";  省略`_ 和 .scss`
 
-```
+```scss
 @import "./partial";
 
 a{
@@ -148,7 +148,7 @@ a{
 
 ## 父类标识符&
 
-```
+```scss
 @import "./partial";
 
 a{
@@ -201,7 +201,7 @@ body.ie #content aside{
 * @mixin  transform($property){}
 * @include transform(rotate(30deg))
 
-```
+```scss
 @mixin transform($property) {
   -webkit-transform: $property;
   -ms-transform: $property;
@@ -229,7 +229,7 @@ body.ie #content aside{
 * %message-shared
 * @extend %message-shared
 
-```
+```scss
 %message-shared{
   border: 1px solid #ccc;
   padding: 10px;
@@ -284,7 +284,7 @@ body.ie #content aside{
 
 ## 操作符
 
-```
+```scss
 .container {
   width: 100%;
 }
@@ -330,7 +330,7 @@ aside[role="complementary"] {
 * red
 * mix
 
-```
+```scss
 .helloworld{
     color:hsl(120deg,100%,50%)
 }
@@ -393,7 +393,7 @@ aside[role="complementary"] {
 
   * 也可以作为作为头部   只能放在头部   abc-& 及 aaa-&-abc  都会报错
 
-  * ```
+  * ```scss
     #main{
         &-abc{
             
@@ -412,7 +412,7 @@ aside[role="complementary"] {
 
 * 嵌套属性
 
-```
+```scss
 .funky {
   font: {
     family: fantasy;
@@ -452,7 +452,7 @@ aside[role="complementary"] {
 
 ## 占位符选择器 %
 
-```
+```scss
 %hello{
     color:red;
     font-size:2em;
@@ -480,7 +480,7 @@ aside[role="complementary"] {
 * // 编译时会被删除 
 * 注释中使用变量
 
-```
+```scss
 $version:"1.2.3";
 
 /*This Css ... version #{$version}.*/
@@ -496,7 +496,7 @@ $version:"1.2.3";
   * 可以进行一些计算
 * 变量提升
 
-```
+```scss
 $width:5em !global;  //提升为全局变量
 ```
 
@@ -512,7 +512,7 @@ $width:5em !global;  //提升为全局变量
 
 ### 字符串
 
-```
+```scss
 @mixin firefox-message($selector) {
   body.firefox #{$selector}:before {
     content: "Hi, Firefox users!";
