--- a/_posts/2020-04-12-vue篇一.md
+++ b/_posts/2020-04-12-vue篇一.md
@@ -28,7 +28,7 @@
 
 * CDN引入
 
-```
+```vue
 开发版
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 生产版
@@ -40,7 +40,7 @@
   * https://vuejs.org/js/vue.min.js   生产环境
 * NPM安装    推荐()
 
-```
+```vue
 webpack和CLI
 ```
 
@@ -50,7 +50,7 @@ webpack和CLI
 * 挂载对象el
 * 数据data
 
-```
+```vue
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -91,7 +91,7 @@ webpack和CLI
 * v-for遍历列表
 * `<li v-for="(item,index) in moveies">{{item}}</li>`
 
-```
+```vue
 <!DOCTYPE html>
 <html lang="en">
 <head>
