--- a/_posts/2020-03-15-React实现文章管理.md
+++ b/_posts/2020-03-15-React实现文章管理.md
@@ -8,7 +8,7 @@
 
 * index.js
 
-```
+```react
 import React from "react";
 import "./style.css"
 import {render} from "react-dom";
@@ -19,7 +19,7 @@ render(<App/>,document.getElementById("root"))
 
 * app.js
 
-```
+```react
 import React from "react";
 import Login from "./pages/login";
 import Home from "./pages/home";
@@ -47,7 +47,7 @@ export default App
 * arcitle文件夹下
 * index.js
 
-```
+```react
 import React from "react";
 import {Switch,Route} from "react-router-dom";
 import Index from "./component";
@@ -73,7 +73,7 @@ export default Arcitle
 * component文件夹下
 * index.js
 
-```
+```react
 import React from "react";
 import {Link} from "react-router-dom";
 import axios from "axios";
@@ -92,7 +92,7 @@ class Index extends React.Component{
         this.setState({
             token : token,
         })
-        axios.get('http://playground.it266.com/article?token='+token)
+        axios.get('http://xxx/article?token='+token)
             .then((response) => {
                 //this.setState();存入articleList
                 this.setState({
@@ -113,12 +113,12 @@ class Index extends React.Component{
             id:id,
         }
         //ajax
-        axios.post('http://playground.it266.com/article/delete?token='+this.state.token,qs.stringify(data))
+        axios.post('http://xxx/article/delete?token='+this.state.token,qs.stringify(data))
             .then((response) => {
                 alert(response.data.data)
 
                 //重新获取数据
-                axios.get('http://playground.it266.com/article?token='+this.state.token)
+                axios.get('http://xxx/article?token='+this.state.token)
                     .then((response) => {
                         console.log(response)
                         this.setState({
@@ -180,7 +180,7 @@ export default Index
 
 * create.js
 
-```
+```react
 import React, {Component} from 'react';
 import axios from "axios";
 import qs from "qs";
@@ -200,7 +200,7 @@ class Create extends Component {
             content:this.state.content,
         }
         //ajax
-        axios.post('http://playground.it266.com/article/create?token='+token,qs.stringify(data))
+        axios.post('http://xxx/article/create?token='+token,qs.stringify(data))
             .then((response) => {
                 alert(response.data.data)
                 this.props.history.push("/article")
@@ -249,7 +249,7 @@ export default Create;
 
 * edit.js
 
-```
+```react
 import React, {Component} from 'react';
 import axios from "axios";
 import qs from "qs";
@@ -266,7 +266,7 @@ class Edit extends Component {
         let token = window.localStorage.getItem("token")
         let id = this.props.match.params.id;
         //ajax
-        axios.get('http://playground.it266.com/article/detail?id='+id+'&token='+token)
+        axios.get('http://xxx/article/detail?id='+id+'&token='+token)
             .then((response) => {
                 //把对应id的文章数据,从api获取到, 放到表单中, 作为默认数据
                 this.setState({
@@ -296,7 +296,7 @@ class Edit extends Component {
         let token = window.localStorage.getItem("token")
         //ajax 成功之后跳转
         let data = {...this.state}
-        axios.post('http://playground.it266.com/article/update?token='+token,qs.stringify(data))
+        axios.post('http://xxx/article/update?token='+token,qs.stringify(data))
             .then((response) => {
                 alert(response.data.data)
                 this.props.history.push("/article")
@@ -327,7 +327,7 @@ export default Edit;
 * home文件夹下
 * index.js
 
-```
+```react
 import React from "react";
 import {Link} from "react-router-dom";
 import "./style.css"
@@ -352,7 +352,7 @@ export default Home
 * login文件夹下
 * index.js
 
-```
+```react
 import React from "react";
 import axios from 'axios'
 import qs from 'qs';
@@ -380,7 +380,7 @@ class Login extends React.Component{
             username: this.state.username,
             password: this.state.password,
         }
-        axios.post('http://playground.it266.com/login', qs.stringify(data))
+        axios.post('http://xxx/login', qs.stringify(data))
             .then((response) => {
                 if(response.data.status) {
                     window.localStorage.setItem("token", response.data.data.token);
