--- a/_posts/2020-03-23-Antd高级配置.md
+++ b/_posts/2020-03-23-Antd高级配置.md
@@ -9,13 +9,13 @@
 
 # Antd高级配置
 
-```
+```react
 yarn add react-app-rewired customize-cra
 //
 npm install react-app-rewired customize-cra
 ```
 
-```
+```json
 /* package.json 的配置需要做如下修改*/
 "scripts": {
 -   "start": "react-scripts start",
@@ -27,7 +27,7 @@ npm install react-app-rewired customize-cra
 }
 ```
 
-```
+```react
 用于按需加载组件代码和样式的 babel 插件
 
 yarn add babel-plugin-import
@@ -35,7 +35,7 @@ yarn add babel-plugin-import
 npm install babel-plugin-import
 ```
 
-```
+```json
  然后在项目的根目录下创建一个 config-overrides.js 用于修改默认配置
  
  const { override, fixBabelImports } = require('customize-cra');
@@ -48,7 +48,7 @@ npm install babel-plugin-import
  );
 ```
 
-```
+```react
 使用
 
 import { Button } from 'antd';
@@ -56,7 +56,7 @@ import { Button } from 'antd';
 <Button type="primary">Button</Button>
 ```
 
-```
+```react
 npm start
 ```
 
