--- a/_posts/2020-03-23-Banner组件化实现.md
+++ b/_posts/2020-03-23-Banner组件化实现.md
@@ -11,7 +11,7 @@
 
 * carousel.js
 
-```
+```react
 import React from 'react';
 import img1 from '../../../img/1.jpg';
 import img2 from '../../../img/2.jpg';
@@ -128,7 +128,7 @@ export default Carousel;
 
 * index.js
 
-```
+```react
 import React from "react";
 import Carousel from './carousel/carousel';
 import img1 from '../../img/1.jpg';
